--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="importmap">
+      {
+        "imports": { "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js" }
+      }
+    </script>
     <title>Vite + Vue</title>
   </head>
   <body>
